--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,10 @@
 body {
-  background-color: #333;
+  background-color: #050505;
 }
 
-#watergame {
-  border: 2px solid white;
+#stars {
+  border: 2px solid #443344;
   width: 1000px;
   margin-left: auto;
   margin-right: auto;
-  cursor: pointer;
 }
